generate MDM profile
